@startuml

class Domination {
	+Player[] players
	+void next()
}

class Case {
	+int crown
	+char type
}

class Domino {
	+char type1
	+char type2
	+int crown1
	+int crown2
	+int n
	#static int count
	+Node getNode()
}

class Board {
	+Case[][] grid
	+Domino domino
	+void show()
}


class Player {
	+Board board
	+ArrayList<Domino> dominos
}

class Main {
	#Domination game
	#void main
}

class Deck {
	+ArrayList<Domino> dominos
	+ArrayList<Domino> pickedDominos
	+void shuffle
	+void pick
}

Main *-- "1" Domination
Domination *-- "2-4" Player
Player *-- "1-2" Domino
Player *-- "1" Board
Board *-- "1" Domino
Player *-- Deck
Deck *-- "1-48" Domino
Deck *-- "0-2" Domino
Board *-- "5*5" Case

@enduml
